@@ -161,7 +161,7 @@ fi
 AC_SUBST(TEXI2DVICMD)
 : ${R_RD4DVI="ae"}
 AC_SUBST(R_RD4DVI)
-: ${R_RD4PDF="times,hyper"}
+: ${R_RD4PDF="times,inconsolata,hyper"}
 AC_SUBST(R_RD4PDF)
 ])# R_PROG_TEXMF
 
