@@ -16,7 +16,7 @@ R_PAPERSIZE_USER=${R_PAPERSIZE}
 R_PAPERSIZE=${R_PAPERSIZE-'a4'}
 # for Rd2dvi, reference manual
 R_RD4DVI=${R_RD4DVI-'ae'}
-R_RD4PDF=${R_RD4PDF-'times,hyper'}
+R_RD4PDF=${R_RD4PDF-'times,inconsolata,hyper'}
 ## used for options("texi2dvi")
 # R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'texi2dvi'}}
 ## used by INSTALL, check, build
