@@ -229,6 +229,13 @@
       \item There is a new function \code{texi2pdf()} in package
       \pkg{tools}, currently a convenience wrapper for
       \code{texi2dvi(pdf = TRUE)}.
+      
+      \item There are two new options for typesetting PDF manuals from
+      Rd files.  These are \code{beramono} and \code[inconsolata}, and
+      used the named font for mononspaced output. They are intended to
+      be used in combination with \code{times}, and
+      \code{times,inconsolata,hyper} is now the default for the
+      reference manual and package manuals.
     }
   }
 
